# dice-poop-bot

./: .gitignore  README.md  birthday.py  config_template.json  dice-poop-bot.py  perudocog.py  pyproject.toml  run_forever.sh
cogs/: __init__.py  birthdaycog.py  perudocog.py
