[tool.poetry]
name = "dice-poop-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
"discord.py" = "^1.4.2"
loguru = "^0.5.1"
aiohttp = "^3.6.2"
giphy_client = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
